expected/main/gens/primStructSelectB-neg-64.err
ERROR: "actual/main/gens/primStructSelectB-neg-64.lc", line 9
external selectP3 {primStructSelect S      4 SW} :: Ref S -> ProxyLab "4" -> Ref SW
         ^
No generated implementation: Argument 2 (4) does not have expected kind (lab)

ERROR: Aborting after previously reported error

